# codelord

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  _typos.toml  justfile  lefthook.yml
apps/coder/codelord/: Cargo.toml  Info.plist  README.md  patch-info-plist.sh
apps/coder/codelord-audio/: Cargo.toml  README.md
apps/coder/codelord-audio/src/: device.rs  error.rs  lib.rs  manager.rs  monitored_source.rs  player.rs  sfx.rs  source.rs  visualizer.rs
apps/coder/codelord-audio/src/source/: file.rs
apps/coder/codelord-coder/: Cargo.toml  README.md
apps/coder/codelord-coder/src/: coder.rs  lib.rs  session.rs
apps/coder/codelord-components/: Cargo.toml  README.md
apps/coder/codelord-components/src/: assets.rs  components.rs  lib.rs  radius.rs
apps/coder/codelord-components/src/assets/: font.rs  icon.rs  image.rs  theme.rs
apps/coder/codelord-components/src/components/: atoms.rs  effects.rs  indicators.rs  instructions.rs  layouts.rs  navigation.rs  organisms.rs  overlays.rs  pages.rs  panels.rs  renderers.rs  structure.rs  views.rs  voice_visualizer.rs  waveform.rs
apps/coder/codelord-components/src/components/atoms/: button.rs  decoration.rs  drag_drop.rs  icon_button.rs  stripe_button.rs
apps/coder/codelord-components/src/components/effects/: magic_zoom.rs  mod.rs  shimmer.rs  stripe.rs  wave.rs
apps/coder/codelord-components/src/components/indicators/: counter.rs  feedback.rs  frame_history.rs  metric.rs
apps/coder/codelord-components/src/components/layouts/: base.rs
apps/coder/codelord-components/src/components/navigation/: breadcrumbs.rs  explorer.rs  stagebar.rs  symbol_track.rs  tabbar.rs  xmb.rs
apps/coder/codelord-components/src/components/organisms/: statusbar.rs  titlebar.rs
apps/coder/codelord-components/src/components/overlays/: file_picker.rs  filescope.rs  popup.rs  toast.rs  toaster.rs  unsaved_changes_dialog.rs
apps/coder/codelord-components/src/components/pages/: about.rs  notes.rs  playground.rs  presenter.rs  settings.rs  text_editor.rs  welcome.rs
apps/coder/codelord-components/src/components/panels/: music_player.rs  panel_bottom.rs  search.rs  (+2 more)
apps/coder/codelord-core/: Cargo.toml  README.md
apps/coder/codelord-core/src/: about.rs  animation.rs  audio.rs  codeshow.rs  color.rs  dialog.rs  drag_and_drop.rs  filescope.rs  instruction.rs  keyboard.rs  language.rs  lib.rs  loading.rs  navigation.rs  page.rs  panel.rs  playground.rs  popup.rs  previews.rs  remote.rs  runtime.rs  search.rs  session.rs  settings.rs  symbol.rs  terminal.rs  text_editor.rs  theme.rs  time.rs  titlebar.rs  toast.rs  token.rs  voice.rs  xmb.rs
apps/coder/codelord-core/src/about/: resources.rs
apps/coder/codelord-core/src/animation/: components.rs  hacker.rs  height.rs  interpolate.rs  mod.rs  opacity.rs  resources.rs  shimmer.rs  systems.rs
apps/coder/codelord-core/src/audio/: mod.rs  resources.rs
apps/coder/codelord-core/src/button/: components.rs
apps/coder/codelord-core/src/codeshow/: events.rs  mod.rs  resources.rs
apps/coder/codelord-core/src/drag_and_drop/: animation.rs  components.rs  messages.rs  mod.rs  resources.rs
apps/coder/codelord-core/src/events/: components.rs  mod.rs
apps/coder/codelord-core/src/file_picker/: components.rs  mod.rs  resources.rs  systems.rs
apps/coder/codelord-core/src/filescope/: components.rs  mod.rs  resources.rs  systems.rs
apps/coder/codelord-core/src/git/: components.rs  mod.rs  resources.rs  systems.rs
apps/coder/codelord-core/src/icon/: components.rs  resources.rs
apps/coder/codelord-core/src/instruction/: components.rs  resources.rs
apps/coder/codelord-core/src/keyboard/: components.rs  resources.rs  systems.rs
apps/coder/codelord-core/src/magic_zoom/: messages.rs  mod.rs  resources.rs  systems.rs
apps/coder/codelord-core/src/navigation/: components.rs  resources.rs  systems.rs
apps/coder/codelord-core/src/page/: components.rs  resources.rs  systems.rs
apps/coder/codelord-core/src/panel/: components.rs  resources.rs  systems.rs
apps/coder/codelord-core/src/playground/: mod.rs  resources.rs  systems.rs
apps/coder/codelord-core/src/popup/: components.rs  resources.rs  systems.rs
apps/coder/codelord-core/src/previews/: csv.rs  csv_preview.rs  font.rs  html.rs  markdown.rs  pdf.rs  sqlite.rs  svg.rs  xls.rs
apps/coder/codelord-core/src/search/: engine.rs  mod.rs  resources.rs
apps/coder/codelord-core/src/settings/: resources.rs  system_info.rs
apps/coder/codelord-core/src/statusbar/: mod.rs  resources.rs  systems.rs
apps/coder/codelord-core/src/symbol/: resources.rs  systems.rs
apps/coder/codelord-core/src/tabbar/: components.rs  mod.rs  resources.rs  systems.rs
apps/coder/codelord-core/src/terminal/: components.rs  mod.rs  resources.rs  systems.rs
apps/coder/codelord-core/src/text_editor/: components.rs  resources.rs  systems.rs
apps/coder/codelord-core/src/theme/: components.rs  resources.rs  systems.rs
apps/coder/codelord-core/src/toast/: components.rs  resources.rs  systems.rs
apps/coder/codelord-core/src/ui/: component.rs
apps/coder/codelord-core/src/voice/: components.rs  resources.rs  systems.rs
apps/coder/codelord-core/src/xmb/: components.rs  resources.rs  systems.rs
apps/coder/codelord-language/: Cargo.toml  README.md
apps/coder/codelord-language/src/: color.rs  language.rs  lib.rs
apps/coder/codelord-language/src/language/: zo.rs
apps/coder/codelord-sdk/: Cargo.toml  README.md
apps/coder/codelord-sdk/src/: lib.rs  pdf.rs  sdk.rs  sqlite.rs  voice.rs
apps/coder/codelord-server/: Cargo.toml  README.md
apps/coder/codelord-server/prompts/: commands.md
apps/coder/codelord-server/src/: lib.rs  main.rs  routes.rs  state.rs
apps/coder/codelord-server/src/automata/: openai.rs
apps/coder/codelord-server/src/routes/: health.rs  playground.rs  preview.rs  rpc.rs  voice.rs
apps/coder/codelord-server/src/workers/: voice.rs
apps/coder/codelord-voice/: Cargo.toml  README.md
apps/coder/codelord-voice/src/: dispatcher.rs  error.rs  input.rs  lib.rs  manager.rs  parser.rs  transcriber.rs  visualizer.rs
apps/coder/codelord/src/: main.rs
(+136 files in other folders)
