[workspace]
members = [
  "apps/coder/codelord",
  "apps/coder/codelord-server",
]

default-members = [
  "apps/coder/codelord",
  "apps/coder/codelord-server",
]

exclude = [
  "/.github/*",
  ".todo.md",
]

resolver = '2'

[workspace.package]
authors = ["the compilords team"]
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/compilords/codelord"
version = "0.0.2"

[workspace.dependencies]
# internal:sources.

# internal:crates:zo.
zo = { git = "https://github.com/invisageable/zo" }
zo-analyzer = { git = "https://github.com/invisageable/zo" }
zo-benches = { git = "https://github.com/invisageable/zo" }
zo-buffer = { git = "https://github.com/invisageable/zo" }
zo-codegen = { git = "https://github.com/invisageable/zo" }
zo-codegen-arm = { git = "https://github.com/invisageable/zo" }
zo-codegen-backend = { git = "https://github.com/invisageable/zo" }
zo-compiler = { git = "https://github.com/invisageable/zo" }
zo-constant-folding = { git = "https://github.com/invisageable/zo" }
zo-constant-propagation = { git = "https://github.com/invisageable/zo" }
zo-dce = { git = "https://github.com/invisageable/zo" }
zo-driver = { git = "https://github.com/invisageable/zo" }
zo-emitter = { git = "https://github.com/invisageable/zo" }
zo-emitter-arm = { git = "https://github.com/invisageable/zo" }
zo-error = { git = "https://github.com/invisageable/zo" }
zo-executor = { git = "https://github.com/invisageable/zo" }
zo-interner = { git = "https://github.com/invisageable/zo" }
zo-metrics = { git = "https://github.com/invisageable/zo" }
zo-name-resolver = { git = "https://github.com/invisageable/zo" }
zo-parser = { git = "https://github.com/invisageable/zo" }
zo-pp = { git = "https://github.com/invisageable/zo" }
zo-profiler = { git = "https://github.com/invisageable/zo" }
zo-reporter = { git = "https://github.com/invisageable/zo" }
zo-runtime = { git = "https://github.com/invisageable/zo" }
zo-runtime-native = { git = "https://github.com/invisageable/zo" }
zo-runtime-render = { git = "https://github.com/invisageable/zo" }
zo-runtime-web = { git = "https://github.com/invisageable/zo" }
zo-sir = { git = "https://github.com/invisageable/zo" }
zo-span = { git = "https://github.com/invisageable/zo" }
zo-token = { git = "https://github.com/invisageable/zo" }
zo-tokenizer = { git = "https://github.com/invisageable/zo" }
zo-tree = { git = "https://github.com/invisageable/zo" }
zo-ty = { git = "https://github.com/invisageable/zo" }
zo-ty-checker = { git = "https://github.com/invisageable/zo" }
zo-ty-state = { git = "https://github.com/invisageable/zo" }
zo-template-optimizer = { git = "https://github.com/invisageable/zo" }
zo-ui-protocol = { git = "https://github.com/invisageable/zo" }
zo-value = { git = "https://github.com/invisageable/zo" }
zo-writer = { git = "https://github.com/invisageable/zo" }
zo-writer-macho = { git = "https://github.com/invisageable/zo" }

# internal:apps:codelord.
codelord = { path = "apps/coder/codelord", version = "0.0.2" }
codelord-audio = { path = "apps/coder/codelord-audio", version = "0.0.2" }
codelord-coder = { path = "apps/coder/codelord-coder", version = "0.0.2" }
codelord-components = { path = "apps/coder/codelord-components", version = "0.0.2" }
codelord-core = { path = "apps/coder/codelord-core", version = "0.0.2" }
codelord-git = { path = "apps/coder/codelord-git", version = "0.0.2" }
codelord-i18n = { path = "apps/coder/codelord-i18n", version = "0.0.2" }
codelord-language = { path = "apps/coder/codelord-language", version = "0.0.2" }
codelord-runtime = { path = "apps/coder/codelord-runtime", version = "0.0.2" }
codelord-protocol = { path = "apps/coder/codelord-protocol", version = "0.0.2" }
codelord-server = { path = "apps/coder/codelord-server", version = "0.0.2" }
codelord-sdk = { path = "apps/coder/codelord-sdk", version = "0.0.2" }
codelord-voice = { path = "apps/coder/codelord-voice", version = "0.0.2" }

# external:crates.
aho-corasick = "1.1.4"
base64 = "0.22.1"
alacritty_terminal = "0.25.1"
ammonia = "4.1.2"
anyhow = "1.0.102"
# ariadne = "0.4.1"
async-openai = "0.33.0"
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["ws"]}
# bevy = { version = "0.15", default-features = false, features = [
#   "bevy_asset",
#   "bevy_core_pipeline",
#   "bevy_render",
#   "bevy_sprite",
#   "bevy_winit",
#   "bevy_window",
#   "multi_threaded",
#   "x11",
# ] }
bevy_ecs = "0.18.1"
blake3 = "1.8.2"
bincode = "3.0.0"
bumpalo = { version = "3.20.2", features = ["collections"] }
bytemuck = "1.25.0"
calamine = "0.33.0"
clap = { version = "4.5.60", features = ["derive"] }
chrono = { version = "0.4.44", features = ["serde"] }
console_error_panic_hook = { version = "0.1.7" }
cpal = "0.17.3"
criterion = { version = "0.8.2", features = ["html_reports"] }
crossbeam = "0.8.4"
csv = "1.4.0"
dashmap = "6.1.0"
dirs = "6.0.0"
dotenv = "0.15.0"
eazy = { version = "0.0.2", features = ["derive"] }
eframe = { version = "0.34.1", default-features = false, features = [
  "accesskit",
  "default_fonts",
  "persistence",
  "wgpu",
  "wayland",   # Linux
  "x11",       # Linux
] }
egui_extras = { version = "0.34.1", default-features = false, features = [
  "file",
  "gif",
  "http",
  "image",
  "svg",
] }
egui_kittest = { version = "0.34.1", default-features = false, features = [
  "snapshot",
  "wgpu",
]}
env_logger = "0.11.9"
fastrand = "2.3.0"
flume = { version = "0.12.0", default-features = true, features = ["async"] }
futures = "0.3.32"
gif = "0.14.0"
gilrs = "0.11.0"
glyphon = "0.10.0"
hashbrown = { version = "0.16.1",  default-features = true, features = [
  "rayon",
  "serde",
] }
hayro = "0.5.0"
hypher = "0.1.6"
js-sys = "0.3.91"
kanal = "0.1.1"
libm = "0.2.16"
lyon_geom = "1.0.18"
image = "0.25.9"
itoa = "1.0.17"
Inflector = "0.11.4"
insta = { version = "1.46.2", features = ["yaml"] }
lightningcss = { version = "1.0.0-alpha.70", features = ["visitor"] }
libc = "0.2.182"
libloading = "0.9.0"
log = "0.4.29"
noise = "0.9.0"
notify = "8.2.0"
nucleo = "0.5.0"
num_cpus = "1.17.0"
objc = "0.2.7"
parking_lot = { version = "0.12.5", features = ["nightly"] }
pdfium-render = "0.8.37"
posthog-rs = "0.4.3"
profiling = "1.0.17"
proptest = "1.10.0"
prost = "0.14.3"
# pubgrub = "0.3.0"
puffin = "0.19.1"
puffin_http = "0.16.1"
pulldown-cmark = "0.13.1"
# pyo3 = { version = "0.27.2", features = ["auto-initialize"] }
raw-window-handle = "0.6.2"
rayon = { version = "1.11.0" }
regex = "1.12.3"
reqwest = { version = "0.13.2", default-features = false, features = [
  "json",
  "multipart",
  "native-tls",
  "stream",
] }
resvg = "0.47.0"
rfd = "0.17.2"
rodio = { version = "0.22.2", features = ["symphonia-all"] }
ron = "0.12.0"
ropey = "1.6.1"
rubato = "1.0.1"
rustc-hash = "2.1.1"
rustfft = "6.4.1"
rust-i18n = "3.1.5"
scraper = "0.25.0"
secrecy = "0.10.3"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
similar = "2.7.0"
smallvec = { version = "1.15.1", features = ["const_new", "serde"] }
smol_str = { version = "0.3.6", features = ["serde"] }
sonic-rs = "0.5.7"
swisskit = "0.0.0"
symphonia = "0.5.5"
sysinfo = "0.38.3"
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "sqlite"
]}
# taffy = "0.9.1"
# teloxide = "0.17.0"
tempfile = "3.26.0"
thin-vec = "0.2.14"
tokio = { version = "1.50.0", default-features = true , features = [
  "fs",
  "macros",
  "rt-multi-thread",
  "sync",
  "time",
] }
# tokio-cron-scheduler = "0.15.1"
tokio-tungstenite = { version = "0.28.0", features = ["connect"] }
toml = "0.8.15"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
thumbhash = "0.1.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tree-sitter = "0.26.6"
tree-sitter-bash = "0.25.1"
tree-sitter-c = "0.24.1"
tree-sitter-css = "0.25.0"
tree-sitter-diff = "0.1.0"
tree-sitter-elixir = "0.3.5"
tree-sitter-gleam = "1.0.0"
tree-sitter-go = "0.25.0"
tree-sitter-highlight = "0.26.6"
tree-sitter-html = "0.23.2"
tree-sitter-javascript = "0.25.0"
tree-sitter-json = "0.24.8"
tree-sitter-language = "0.1.7"
tree-sitter-md = "0.5.3"
# tree-sitter-ocaml = "0.24.2"
tree-sitter-python = "0.25.0"
tree-sitter-regex = "0.25.0"
tree-sitter-rust = "0.24.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-yaml = "0.7.2"
tree-sitter-zig = "1.1.2"
tree-sitter-zo = "0.0.0"
usvg = "0.47.0"
uuid = { version = "1.22.0", features = ["serde", "v4", "v7"] }
walkdir = "2.5.0"
wasm-bindgen = "0.2.114"
wasm-bindgen-futures = "0.4.64"
wasmi = "1.0.9"
web-sys = { version = "0.3.91", features = [
  "Comment",
  "console",
  "CssStyleDeclaration",
  "Document",
  "Element",
  "Event",
  "EventListener",
  "EventTarget",
  "HtmlCollection",
  "HtmlElement",
  "HtmlHeadElement",
  "HtmlInputElement",
  "InputEvent",
  "KeyboardEvent",
  "MouseEvent",
  "Node",
  "NodeList",
  "Performance",
  "Response",
  "Text",
  "Window",
] }
wgpu = { version = "28.0.0", features = ["metal", "dx12", "vulkan"] }
whisper-rs = "0.15.1"
wide = { version = "1.1.1", features = ["serde"] }
winit = "0.30.13"
wit-bindgen = "0.53.1"
wry = "0.54.2"
# zmij = "1.0.7"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
