[package]
name = "codelord-coder"
version.workspace = true
edition.workspace = true

[lib]
doctest = false

[dependencies]
# internal:sources.

# internal:crates.
codelord-audio = { workspace = true }
codelord-components = { workspace = true }
codelord-core = { workspace = true }
codelord-language = { workspace = true }
codelord-protocol = { workspace = true }
codelord-sdk = { workspace = true }
codelord-voice = { workspace = true }

# external:crates.
bevy_ecs = { workspace = true }
eframe = { workspace = true }
flume = { workspace = true }
gilrs = { workspace = true }
log = { workspace = true }
raw-window-handle = { workspace = true }
serde = { workspace = true }
swisskit = { workspace = true }
tokio = { workspace = true }
