[package]
name = "codelord-core"
version.workspace = true
edition.workspace = true

[lib]
doctest = false

[dependencies]
# internal:sources.

# internal:crates.
codelord-audio = { workspace = true }
codelord-git = { workspace = true }
codelord-i18n = { workspace = true }
codelord-protocol = { workspace = true }

# external:crates.
aho-corasick = { workspace = true }
bevy_ecs = { workspace = true }
csv = { workspace = true }
eazy = { workspace = true }
fastrand = { workspace = true }
flume = { workspace = true }
log = { workspace = true }
nucleo = { workspace = true }
raw-window-handle = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
rfd = { workspace = true }
ropey = { workspace = true }
rust-i18n = { workspace = true }
rustc-hash = { workspace = true }
sonic-rs = { workspace = true }
swisskit = { workspace = true }
sysinfo = { workspace = true }
tokio = { workspace = true }
walkdir = { workspace = true }
