[package]
name = "codelord-language"
version.workspace = true
edition.workspace = true

[lib]
doctest = false

[dependencies]
# internal:sources.

# internal:crates.
codelord-core = { workspace = true }

# external:crates.
regex = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-bash = { workspace = true }
tree-sitter-c = { workspace = true }
tree-sitter-css = { workspace = true }
tree-sitter-diff = { workspace = true }
tree-sitter-elixir = { workspace = true }
tree-sitter-gleam = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-html = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-json = { workspace = true }
tree-sitter-md = { workspace = true }
# tree-sitter-ocaml = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-yaml = { workspace = true }
tree-sitter-zig = { workspace = true }
tree-sitter-zo = { workspace = true }

[build-dependencies]
cc="*"
